Fixed image size on IOS devices

--- a/src/app/pages/home/components/section-portfolio/project-card/project-card.component.scss
+++ b/src/app/pages/home/components/section-portfolio/project-card/project-card.component.scss
@@ -21,10 +21,10 @@ $card-bg-original-h: 1080px;
   background-color: grey;
 
   .image-wrapper {
-    display: flex;
-
     width: 100%;
+
     img {
+      min-height: 0;
       width: 100%;
       height: auto;
     }
@@ -45,7 +45,7 @@ $card-bg-original-h: 1080px;
     border-radius: 0 0 6px 6px;
     color: white;
     box-shadow: 0px -5px 5px 0px rgba(0, 0, 0, 0.36);
-    //backdrop-filter: blur(6px);
+    backdrop-filter: blur(6px);
     background-color: rgba(0, 0, 0, 0.3);
 
     transition: bottom .3s ease-out;
